[workspace]
resolver = "2"
members = ["user", "common", "ebpf"]
default-members = ["user", "common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
const-gen = { git = "https://github.com/nan-mu/const-gen.git", branch = "net", default-features = false }
toml = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false }
procfs = { version = "0.17", default-features = false }
pidfile2 = { version = "0.1", default-features = false }

anyhow = { version = "1", default-features = false }
clap = { version = "4.5", default-features = false }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.27", default-features = false }
tokio = { version = "1", default-features = false }
which = { version = "7", default-features = false }

[profile.release.package.ebpf]
debug = 2
codegen-units = 1
