[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }
const-gen = { workspace = true, features = ["std", "derive", "net"]}
toml = { workspace = true , features = ["parse"] }
serde = { workspace = true, features = ["derive"] }

[[bin]]
name = "hardworker"
path = "src/main.rs"
